--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 body {
-    background-image: url("/assets/images/photo-1456154875099-97a3a56074d3.png");
+    background-image: url("/Users/khernandez/GitHub/TriviaGame/assets/images/photo-1456154875099-97a3a56074d3.png");
+    background-repeat: repeat-x;
+    color: white;
 };
+
+#quiz {
+    color: white;
+};
+
+
 
