--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url("/Users/khernandez/GitHub/TriviaGame/assets/images/photo-1456154875099-97a3a56074d3.png");
     background-repeat: repeat-x;
-    color: white;
+    color: floralwhite !important;
 };
 
-#quiz {
-    color: white;
+.content {
+    background-color: navy;
 };
+
 
 
 
