--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url("/Users/khernandez/GitHub/TriviaGame/assets/images/photo-1456154875099-97a3a56074d3.png");
-    background-repeat: repeat-x;
+    background-repeat: repeat;
     
 }
 
@@ -16,6 +16,7 @@ body {
     padding-bottom: 100px;
     padding-left: 100px;
     padding-right: 100px;
+    width: 500px !important;
     border-style: dotted !important;
     border-color: white;
 }
